Final Shopping Cart

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button id="decrementProduct1" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="quantity1" type="text" class="form-control text-center" value="1">
-                           <button id="incrementProduct1" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button onclick="handleQuantityChange('phone', 1219, false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="phone-quantity" type="text" class="form-control text-center mx-1" value="1">
+                           <button onclick="handleQuantityChange('phone', 1219, true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$<span id="product1Price">1219</span></h5>
+                        <h5>$<span id="phone-price">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -40,11 +40,11 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button id="decrementProduct2" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="quantity2" type="text" class="form-control text-center" value="1">
-                           <button id="incrementProduct2" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button onclick="handleQuantityChange('case', 59, false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="case-quantity" type="text" class="form-control text-center mx-1" value="1">
+                           <button onclick="handleQuantityChange('case', 59, true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$<span id="product2Price">59</span></h5>
+                        <h5>$<span id="case-price">59</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -55,14 +55,14 @@
 
                      <div class="col-md-8">
                         <h5>Subtotal: </h5>
-                        <h5>Tax:</h5>
+                        <h5>Tax (10%):</h5>
                         <h5>Total:</h5>
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$<span id="subtotal"></span></h5>
-                        <h5>$<span id="tax">0</span></h5>
-                        <h5>$<span id="total"></span></h5>
+                        <h5>$<span id="subtotal">1278</span></h5>
+                        <h5>$<span id="tax">128</span></h5>
+                        <h5>$<span id="total">1406</span></h5>
                      </div>
                   </div>
                </div>
@@ -74,68 +74,44 @@
       </div>
    </section>
    <script>
-      function setTotalSubtotal(){
-         var product1Price = parseInt(document.getElementById('product1Price').innerText);
-         var product2Price = parseInt(document.getElementById('product2Price').innerText);
-         var subtotal = product1Price + product2Price;
+      function getData(id, isText){
+         if(isText == true){
+            var price = document.getElementById(id).innerText;
+            return parseInt(price);
+         }
+         if(isText == false){
+            var quantity = document.getElementById(id).value;
+            return parseInt(quantity);
+         }
+      }
+
+      function calculateTotal(){
+         var phonePrice = getData('phone-price', true);
+         var casePrice = getData('case-price', true);
+         var subtotal = phonePrice + casePrice;
          document.getElementById('subtotal').innerText = subtotal;
 
-         var tax = parseInt(document.getElementById('tax').innerText);
+         var tax = Math.round(subtotal * 0.1);
+         document.getElementById('tax').innerText = tax;
          var total = subtotal + tax;
          document.getElementById('total').innerText = total;
       }
-      function increment(id, price){
-         var currentQuantity = document.getElementById(id).value;
-         var quantityNumber = parseInt(currentQuantity);
-         var newQuantityNumber = quantityNumber + 1;
-         document.getElementById(id).value = newQuantityNumber;
+
+      function handleQuantityChange(id, price, isIncrement){
+         var currentQuantity = getData(id + "-quantity", false);
+         var newQuantityNumber = 0;
+         if(isIncrement == true){
+            newQuantityNumber = currentQuantity + 1;
+         }
+         if(isIncrement == false && currentQuantity > 0){
+            newQuantityNumber = currentQuantity - 1;
+         }
+         document.getElementById(id + "-quantity").value = newQuantityNumber;
 
          var newProductPrice = price * newQuantityNumber;
-         return newProductPrice;
+         document.getElementById(id + "-price").innerText = newProductPrice;
+         calculateTotal();
       }
-      function decrement(id, price){
-         var currentQuantity = document.getElementById(id).value;
-         var quantityNumber = parseInt(currentQuantity);
-         var newQuantityNumber = quantityNumber - 1;
-         document.getElementById(id).value = newQuantityNumber;
-
-         var newProductPrice = price * newQuantityNumber;
-         return newProductPrice;
-      }
-
-      setTotalSubtotal();
-
-      var incrementProduct1 = document.getElementById('incrementProduct1');
-      incrementProduct1.addEventListener('click', function(){
-         var newPrice = increment("quantity1", 1219);
-         document.getElementById('product1Price').innerText = newPrice;
-
-         setTotalSubtotal();
-      })
-
-      var decrementProduct1 = document.getElementById('decrementProduct1');
-      decrementProduct1.addEventListener('click', function(){
-         var newPrice = decrement("quantity1", 1219);
-         document.getElementById('product1Price').innerText = newPrice;
-
-         setTotalSubtotal();
-      })
-
-      var incrementProduct2 = document.getElementById('incrementProduct2');
-      incrementProduct2.addEventListener('click', function(){
-         var newPrice = increment("quantity2", 59);
-         document.getElementById('product2Price').innerText = newPrice;
-
-         setTotalSubtotal();
-      })
-
-      var decrementProduct2 = document.getElementById('decrementProduct2');
-      decrementProduct2.addEventListener('click', function(){
-         var newPrice = decrement("quantity2", 59);
-         document.getElementById('product2Price').innerText = newPrice;
-
-         setTotalSubtotal();
-      })
    </script>
 </body>
 </html>
